# CS366_Microservices_Project

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  demo.sh  docker-compose.yml  setup_aws.sh  setup_rds_sns.sh
migrations/: 0001_initial.sql
src/: main.rs
src/db/: mod.rs
src/errors/: mod.rs
src/handlers/: health.rs  match_handler.rs  mod.rs  task.rs  volunteer.rs
src/messaging/: mod.rs
src/models/: match_model.rs  mod.rs  task.rs  volunteer.rs
