[package]
name = "volunteer_match_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "volunteer_match_service"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
aws-config = "1"
aws-sdk-sns = "1"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "2"
